--- a/package.json
+++ b/package.json
@@ -5,12 +5,23 @@
   "dependencies": {
     "@types/jest": "24.0.15",
     "@types/node": "12.0.10",
-    "@types/react": "16.8.22",
+    "@types/react": "^16.8.22",
     "@types/react-dom": "16.8.4",
+    "@types/react-redux": "^7.1.1",
+    "@types/redux": "^3.6.0",
+    "@types/redux-form": "^8.1.4",
+    "@types/redux-logger": "^3.0.7",
+    "@types/uuid": "^3.4.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
     "react-scripts": "3.0.1",
-    "typescript": "3.5.2"
+    "redux": "^4.0.1",
+    "redux-form": "^8.2.4",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
+    "typescript": "3.5.2",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
